--- a/index.html
+++ b/index.html
@@ -11,20 +11,49 @@ include'header.html';
 </div>
 
 <div class="container">
+<section>
 
+<b>What is Java technology and why do I need it?</b>
 <p>
-<b>Java</b>
-
- is a programming language and computing platform first released by Sun Microsystems in 1995.
- </p>
-
+Java is a programming language and computing platform first released by Sun Microsystems in 1995. There are lots of applications and websites that will not work unless you have Java installed, and more are created every day. Java is fast, secure, and reliable. From laptops to datacenters, game consoles to scientific supercomputers, cell phones to the Internet, Java is everywhere!</p>
+</p>
+<b>Is Java free to download?</b>
 <p>
-There are lots of applications and websites that will not work unless you have Java installed, and more are created every day. Java is fast, secure, and reliable. From laptops to datacenters, game consoles to scientific supercomputers, cell phones to the Internet, 
+Yes, Java is free to download. Get the latest version at java.com.
+</p>
+<p>
+If you are building an embedded or consumer device and would like to include Java, please contact Oracle for more information on including Java in your device.
+</p>
+<b>Why should I upgrade to the latest Java version?</b>
+<p>
+The latest Java version contains important enhancements to improve performance, stability and security of the Java applications that run on your machine. Installing this free update will ensure that your Java applications continue to run safely and efficiently.
+</p>
 
-<i>Java is everywhere!</i>
+<div class="container">
+
+<h1> MORE TECHNICAL INFORMATION </h1>
+
+</div>
+
+<b>What will I get when I download Java software?</b>
+<p>
+The Java Runtime Environment (JRE) is what you get when you download Java software. The JRE consists of the Java Virtual Machine (JVM), Java platform core classes, and supporting Java platform libraries. The JRE is the runtime portion of Java software, which is all you need to run it in your Web browser.
+</p>
+
+<b>What is Java Plug-in software?</b>
+<p>
+The Java Plug-in software is a component of the Java Runtime Environment (JRE). The JRE allows applets written in the Java programming language to run inside various browsers. The Java Plug-in software is not a standalone program and cannot be installed separately.
+<p>
+
+<b>I have heard the terms Java Virtual Machine and JVM. Is this Java software?</b>
+<p>
+The Java Virtual Machine is only one aspect of Java software that is involved in web interaction. The Java Virtual Machine is built right into your Java software download, and helps run Java applications.
 </p>
 
 
+<p style="font-size:10px;">Info found on: <a href="https://java.com/en/download/faq/whatis_java.xml">https://java.com/en/download/faq/whatis_java.xml</a>
+</p>
+</section>
 <?php
 
 include'footer.html';
