--- a/step2.html
+++ b/step2.html
@@ -28,23 +28,23 @@ include'header.html';
 <p> File --> New --> Java Project</p>
 
 
-<div class="image container">
+<div class="image">
 <img src="/img/welcome.png">
 </div>
 
-<div class="container">
+<div class="image">
 <img class="arrow" src="/img/down.png">
 </div>
 
-<div class="image container">
+<div class="image">
 <img src="/img/file.png">
 </div>
 
-<div class="container">
+<div class="image">
 <img class="arrow" src="/img/down.png">
 </div>
 
-<div class="image container">
+<div class="image">
 <img src="/img/javaproject.png">
 </div>
 
