--- a/step2.html
+++ b/step2.html
@@ -57,7 +57,7 @@ include'header.html';
 <h2>Your Project</h2>
 <p>After choosing New Project you will be prompted to give your project a name</p>
 
-<div class="image container">
+<div class="image">
 <img src="/img/nameproject.png">
 </div>
 
