--- a/step4.html
+++ b/step4.html
@@ -13,7 +13,7 @@ include 'header.html'
 <h2>Main Method</h2>
 <p>In order to run any Java program the computer must be told where to begin running the code. </p>
 <p>This is called the <b>main method</b>, any code you put inside the main method is immediately run when the program is called</p>
-<div class="image">
+<div class="image container">
 <img src="/img/mainmethod.png">
 </div>
 
@@ -28,7 +28,7 @@ include 'header.html'
 <p>Now, inside of the brackets in the main method type:</p>
 <p><i>System.out.println("Hello World");</i></p>
 
-<div class="image">
+<div class="image container">
 <img src="/img/println.png">
 </div>
 </section>
@@ -40,7 +40,7 @@ include 'header.html'
 <p> Now that you have entered all the code needed, it's time to run the program.</p>
 <p>To run the program, find the green play button at the top of Eclipse's navigation bar.</p>
 
-<div class="image">
+<div class="image container">
 <img src="/img/done.png">
 </div>
 
