--- a/step2.html
+++ b/step2.html
@@ -14,7 +14,7 @@ include'header.html';
 <section>
 <h2>Launch Eclipse</h2>
 <p>Open Eclipse, you will be prompted to set the directory where all of your projects will be saved.</p>
-<div class="image">
+<div class="image container">
 <img src="/img/workspace.png">
 </div>
 </section>
@@ -28,21 +28,21 @@ include'header.html';
 <p> File --> New --> Java Project</p>
 
 
-<div class="image">
+<div class="image container">
 <img src="/img/welcome.png">
 </div>
 
 
-<img class="arrow" src="/img/down.png">
+<img class="arrow container" src="/img/down.png">
 
 
-<div class="image">
+<div class="image container">
 <img src="/img/file.png">
 </div>
 
-<img class="arrow" src="/img/down.png">
+<img class="arrow container" src="/img/down.png">
 
-<div class="image">
+<div class="image container">
 <img src="/img/javaproject.png">
 </div>
 
@@ -57,7 +57,7 @@ include'header.html';
 <h2>Your Project</h2>
 <p>After choosing New Project you will be prompted to give your project a name</p>
 
-<div class="image">
+<div class="image container">
 <img src="/img/nameproject.png">
 </div>
 
