--- a/step3.html
+++ b/step3.html
@@ -13,7 +13,7 @@ include 'header.html'
 <h2>Create Your Class</h2>
 <p>Under the Package Explorer find your project and right click</p>
 <p> Navigate to: New --> Class</p>
-<div class="image">
+<div class="image container">
 <img src="/img/newclass.png">
 </div>
 </section>
@@ -25,7 +25,7 @@ include 'header.html'
 <p>A Java Class file sits inside of your porject, you must give your class file a name.</p>
 <p>Enter "main" into the <i>Name</i> and click finish.</p>
 
-<div class="image">
+<div class="image container">
 <img src="/img/classname.png">
 </div>
 </section>
@@ -35,7 +35,7 @@ include 'header.html'
 <section>
 <h2>Your Almost Finished!</h2>
 <p>After creating your Java Project and Class files, your Eclipse workspace should look something like this:</p>
-<div class="image">
+<div class="image container">
 <img src="/img/almost.png">
 </div>
 
