--- a/step1.html
+++ b/step1.html
@@ -52,13 +52,13 @@ include'header.html';
 <li>
 <section>
 
-<h2>Setting up your enviroment</h2>
+<h2>Setting up you're environment</h2>
 
 <ol>
 <li><p>Extract the files you have downloaded and run the Eclipse Installer.</p></li>
 <li><p>After opening the installer, choose the first option, "Eclipse IDE for Java Developers".</p></li>
 <li><p>Follow the rest of the prompts, choose your installation directory and wait for the installer to complete</p></li>
-<li><p>After the installation is complete choose the "Lauch" option to start eclipse</p></li>
+<li><p>After the installation is complete choose the "Launch" option to start eclipse</p></li>
 </ol>
 
 <p>Continue to the <a href="step2.html">next page</a> to learn how to write your first program</p>
