--- a/header.html
+++ b/header.html
@@ -18,6 +18,7 @@
 <a id="step2.html" href="step2.html">Create a Java Project</a>
 <a id="step3.html" href="step3.html">Create a Class</a>
 <a id="step4.html" href="step4.html">Hello World!</a>
+<a id="form.html" href="form.html">Leave a Comment</a>
 
 </nav>
  
