Added form validation and email for form

--- a/header.html
+++ b/header.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html" />
 <title>Final Project COM271</title>
 
 <link rel="stylesheet" type="text/css" href="responsive.css">
 <link rel="stylesheet" type="text/css" href="normal.css">
+
 <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
-<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700,500' rel='stylesheet' type='text/css'>
+<meta charset="utf-8">
 
 <script src="active.js"></script>
 
+</head>
 
 <nav>
 <a id="index.html" href="index.html">Welcome</a>
@@ -21,7 +22,5 @@
 <a id="form.html" href="form.html">Leave a Comment</a>
 
 </nav>
- 
-</head>
 
 <body>
