--- a/step1.html
+++ b/step1.html
@@ -1,6 +1,6 @@
 <?php
 
-include'header.html';
+require'header.html';
 
 ?>
 
@@ -71,6 +71,6 @@ include'header.html';
 
 <?php
 
-include'footer.html';
+require'footer.html';
 
 ?>
