--- a/step2.html
+++ b/step2.html
@@ -1,6 +1,6 @@
 <?php
 
-include'header.html';
+require'header.html';
 
 ?>
 <div class="container">
@@ -81,6 +81,6 @@ include'header.html';
 
 <?php
 
-include'footer.html';
+require'footer.html';
 
 ?>
