--- a/step3.html
+++ b/step3.html
@@ -1,5 +1,5 @@
 <?php 
-include 'header.html'
+require 'header.html'
 ?>
 
 <div class="container">
@@ -52,7 +52,7 @@ include 'header.html'
 
 
 <?php 
-include'footer.html';
+require'footer.html';
 ?>
 
 
