--- a/step4.html
+++ b/step4.html
@@ -1,5 +1,5 @@
 <?php 
-include 'header.html'
+require 'header.html'
 ?>
 
 <div class="container">
@@ -62,5 +62,5 @@ include 'header.html'
 
 
 <?php 
-include'footer.html';
+require'footer.html';
 ?>
