--- a/form.html
+++ b/form.html
@@ -1,7 +1,8 @@
 <?php
-include'header.html';
+require'header.html';
 require'connect.php';
 ?>
+
 <div class="container">
 <h1>Leave a comment:</h1>
 </div>
@@ -10,17 +11,36 @@ require'connect.php';
 <p>Inputs are now sanatized with <b>PHP: htmlspecialchars()</b> and <b>MySql: mysqli_real_escape_string()</b>
 </p>
 </div>
+
 <form action="comment.php" method="post">
+
 <div class="container">
-<input type="text" name="name" placeholder="YourName"/>
+<input type="text" name="name" placeholder="Name" pattern="[a-zA-Z]+[ ][a-zA-Z]+" title="First and Last name"required/>
 </div>
+
 <div class="container">
-<textarea name="comment" cols="50" rows="5" placeholder="Leave a Comment"></textarea>
+<input type="email" name="email" placeholder="E-mail" required/>
 </div>
+
 <div class="container">
-<input type="submit" value="comment" />
+<p>Would you like to share you're E-mail?</p>
+<input type="radio" name="yes.no" value="yes" checked>Yes
+<br>
+<input type="radio" name="yes.no" value="no">No
+<br>
+</div>
+
+<div class="container">
+<textarea name="comment" cols="50" rows="5" placeholder="Leave a Comment" required>
+</textarea>
+</div>
+
+<div class="container">
+<input type="submit" value="comment"/>
+</div>
+
 </form>
-</div>
+
 
 
 <?php
@@ -32,10 +52,15 @@ while($row = $result->fetch_assoc()){
 
 	$comment_name= $row['name'];
 	$comment= $row['comment'];
+	$choice= $row['choice'];
+	$email= $row['email'];
 
 echo'<div class="container">';
 echo'<section>';
 echo'<h2> ';echo"$comment_name";echo' </h2>';
+if($choice == "yes"){
+	echo'<h2>';echo"$email";echo'</h2>';
+}
 echo'<p>';echo"$comment";echo'</p>';
 echo'</section>';
 echo'</div>';
@@ -45,5 +70,5 @@ echo'</div>';
 ?>
 
 <?php
-include'footer.html';
+require'footer.html';
 ?>
