--- a/form.html
+++ b/form.html
@@ -24,9 +24,9 @@ require'connect.php';
 
 <div class="container">
 <p>Would you like to share you're E-mail?</p>
-<input type="radio" name="yes.no" value="yes" checked>Yes
+<input type="radio" name="YesNo" value="yes" checked>Yes
 <br>
-<input type="radio" name="yes.no" value="no">No
+<input type="radio" name="YesNo" value="no">No
 <br>
 </div>
 
