added . to img files

--- a/step2.html
+++ b/step2.html
@@ -15,7 +15,7 @@ require'header.html';
 <h2>Launch Eclipse</h2>
 <p>Open Eclipse, you will be prompted to set the directory where all of your projects will be saved.</p>
 <div class="image container">
-<img src="/img/workspace.png">
+<img src="./img/workspace.png">
 </div>
 </section>
 </li>
@@ -29,7 +29,7 @@ require'header.html';
 
 
 <div class="image container">
-<img src="/img/welcome.png">
+<img src="./img/welcome.png">
 </div>
 
 
@@ -37,13 +37,13 @@ require'header.html';
 
 
 <div class="image container">
-<img src="/img/file.png">
+<img src="./img/file.png">
 </div>
 
 <img class="arrow container" src="/img/down.png">
 
 <div class="image container">
-<img src="/img/javaproject.png">
+<img src="./img/javaproject.png">
 </div>
 
 
@@ -58,7 +58,7 @@ require'header.html';
 <p>After choosing New Project you will be prompted to give your project a name</p>
 
 <div class="image container">
-<img src="/img/nameproject.png">
+<img src="./img/nameproject.png">
 </div>
 
 <p> Enter "HelloWorld" in the <i>Project Name</i> box and click finish</p>
