--- a/step3.html
+++ b/step3.html
@@ -14,7 +14,7 @@ require 'header.html'
 <p>Under the Package Explorer find your project and right click</p>
 <p> Navigate to: New --> Class</p>
 <div class="image container">
-<img src="/img/newclass.png">
+<img src="./img/newclass.png">
 </div>
 </section>
 </li>
@@ -26,7 +26,7 @@ require 'header.html'
 <p>Enter "main" into the <i>Name</i> and click finish.</p>
 
 <div class="image container">
-<img src="/img/classname.png">
+<img src="./img/classname.png">
 </div>
 </section>
 </li>
@@ -36,7 +36,7 @@ require 'header.html'
 <h2>Your Almost Finished!</h2>
 <p>After creating your Java Project and Class files, your Eclipse workspace should look something like this:</p>
 <div class="image container">
-<img src="/img/almost.png">
+<img src="./img/almost.png">
 </div>
 
 <p>Continue to the <a href="step4.html">next page</a> to begin writting some Java code.</p>
