--- a/step4.html
+++ b/step4.html
@@ -14,7 +14,7 @@ require 'header.html'
 <p>In order to run any Java program the computer must be told where to begin running the code. </p>
 <p>This is called the <b>main method</b>, any code you put inside the main method is immediately run when the program is called</p>
 <div class="image container">
-<img src="/img/mainmethod.png">
+<img src="./img/mainmethod.png">
 </div>
 
 <p>Inside the class brackets, Enter the following string of text:</p>
@@ -29,7 +29,7 @@ require 'header.html'
 <p><i>System.out.println("Hello World");</i></p>
 
 <div class="image container">
-<img src="/img/println.png">
+<img src="./img/println.png">
 </div>
 </section>
 </li>
@@ -41,7 +41,7 @@ require 'header.html'
 <p>To run the program, find the green play button at the top of Eclipse's navigation bar.</p>
 
 <div class="image container">
-<img src="/img/done.png">
+<img src="./img/done.png">
 </div>
 
 <p>If everything goes well, you should see "Hello World" appear under the console tab.</p>
