--- a/form.html
+++ b/form.html
@@ -19,7 +19,7 @@ require'connect.php';
 </div>
 
 <div class="container">
-<input type="email" name="email" placeholder="E-mail" required/>
+<input type="email" name="email" placeholder="E-Mail" required/>
 </div>
 
 <div class="container">
@@ -31,7 +31,7 @@ require'connect.php';
 </div>
 
 <div class="container">
-<textarea name="comment" cols="50" rows="5" placeholder="Leave a Comment" required>
+<textarea name="text" cols="50" rows="5" placeholder="Leave a Comment" required>
 </textarea>
 </div>
 
