--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@ require'connect.php';
 </div>
 
 <div class="container">
-<input type="submit" value="comment"/>
+<input type="submit" value="Submit"/>
 </div>
 
 </form>
