--- a/form.html
+++ b/form.html
@@ -57,10 +57,10 @@ while($row = $result->fetch_assoc()){
 
 echo'<div class="container">';
 echo'<section>';
-echo'<h2>User: ';echo"$comment_name";echo'  </h2>';
+echo'<h2>User: '+'$comment_name'+' </h2>';
 if($choice == "yes"){
-echo'<h2>User: ';echo"$comment_name";echo'  </h2>';
-echo'<a href="mailto:';echo"$email";echo'>';echo"$email";echo"</a>";
+echo'<h2>'+'$comment_name'+' </h2>';
+echo'<a href=mailto:'+'$email'+'>'+'$email'+'</a>';
 }
 echo'<p>';echo"$comment";echo'</p>';
 echo'</section>';
