--- a/form.html
+++ b/form.html
@@ -59,8 +59,8 @@ echo'<div class="container">';
 echo'<section>';
 echo'<h2>User: '+'$comment_name'+' </h2>';
 if($choice == "yes"){
-echo'<h2>'+'$comment_name'+' </h2>';
-echo'<a href=mailto:'+'$email'+'>'+'$email'+'</a>';
+echo'<h2>';echo'$comment_name';echo' </h2>';
+echo'<a href=mailto:';echo'$email';echo'>';echo'$email';echo'</a>';
 }
 echo'<p>';echo"$comment";echo'</p>';
 echo'</section>';
