--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="responsive.css">
 <link rel="stylesheet" type="text/css" href="normal.css">
 
-<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 
 <script src="active.js"></script>
