--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@ require'header.html';
 
 <div class="container">
 
-<h1> What is Java? </h1>
-
 <section>
+<h1> What is Java? </h1>
 <p>
 Java is a general-purpose computer programming language that is concurrent, class-based, object-oriented, and specifically designed to have as few implementation dependencies as possible. It is intended to let application developers "write once, run anywhere" (WORA), meaning that compiled Java code can run on all platforms that support Java without the need for recompilation.
 </p>
 <p> Java applications are typically compiled to bytecode that can run on any Java virtual machine (JVM) regardless of computer architecture. As of 2015, Java is one of the most popular programming languages in use, particularly for client-server web applications, with a reported 9 million developers.[citation needed] Java was originally developed by James Gosling at Sun Microsystems (which has since been acquired by Oracle Corporation) and released in 1995 as a core component of Sun Microsystems' </p>
+</section>
+<section>
+<h1>Is it Similar to Other Languages</h1>
 <p>Java platform. The language derives much of its syntax from C and C++, but it has fewer low-level facilities than either of them.</p>
 
 </section>
 <section>
+<h1>Who Owns it?</h1>
 <p>The original and reference implementation Java compilers, virtual machines, and class libraries were originally released by Sun under proprietary licences. As of May 2007, in compliance with the specifications of the Java Community Process, Sun relicensed most of its Java technologies under the GNU General Public License. 
 </p>
 <p>
@@ -24,6 +27,7 @@ Others have also developed alternative implementations of these Sun technologies
 </p>
 </section>
 <section>
+<h1>Versions?</h1>
 <p>
 The latest version is Java 8, which is the only version currently supported for free by Oracle, although earlier versions are supported both by Oracle and other companies on a commercial basis.
 </p>
