--- a/step2.html
+++ b/step2.html
@@ -33,14 +33,14 @@ require'header.html';
 </div>
 
 
-<img class="arrow container" src="/img/down.png">
+<img class="arrow container" src="./img/down.png">
 
 
 <div class="image container">
 <img src="./img/file.png">
 </div>
 
-<img class="arrow container" src="/img/down.png">
+<img class="arrow container" src="./img/down.png">
 
 <div class="image container">
 <img src="./img/javaproject.png">
